# etl_app_w_sync_to_find_free_slots

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
configs/: flask.env  flask.env.sec  local.env  no_sql.env
meet_app/: app.py  settings.py
meet_app/data/: db_schema.uml  db_session.py
meet_app/data/json/: load_data_resp.json
meet_app/data/models/: meets.py  modelbase.py  syncs.py  users.py
meet_app/enums/: sa.py
meet_app/infra/: find_free_slots.py  request_mod.py  response_mod.py  time_slots.py
meet_app/services/: meet_service.py  sync_service.py  user_service.py
meet_app/utils/: db.py  py.py
meet_app/views/: meet_views.py
migrations/: utils.py
migrations/alembic/: env.py
scripts/: run_app_sql_ver.sh  run_load_data.sh
tests/data/: postman_collection.json
