[tool.poetry]
name = "meet_app"
version = "0.1.0"
description = "# Test task: Application to get suggestions for suitable meeting times"
authors = ["Alexander Nesterovich <a.v.nesterovich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
