[tool.poetry]
name = "meet_app"
version = "0.1.0"
description = "# Test task: Application to get suggestions for suitable meeting times"
authors = ["Alexander Nesterovich <a.v.nesterovich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
pandas = "^1.4.1"
SQLAlchemy = "^1.4.31"
mongoengine = "^0.24.0"
python-dotenv = "^0.19.2"
SQLAlchemy-Utils = "^0.38.2"
progressbar = "^2.5"
APScheduler = "^3.9.1"
alembic = "^1.7.6"
sqlacodegen = "^2.3.0"
codetiming = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
